# minecraft-skin-renderer-telegram-bot-backend

./: .clang-format  .gitignore  CMakeLists.txt  test.sh
include/glad/: glad.h
resource/: default.mconf
shaders/: bg_fragment_shader.glsl  bg_fragment_shader_image.glsl  bg_fragment_shader_plain.glsl  bg_vertex_shader.glsl  fragment_shader.glsl  model_fragment_shader.glsl  model_vertex_shader.glsl  vertex_shader.glsl
src/: CMakeLists.txt  glad.c  image.cpp  main.cpp  model.cpp
