
SET(SOURCE_FILE glad.c main.cpp)

ADD_EXECUTABLE(MCSkinRenderer ${SOURCE_FILE})

INCLUDE_DIRECTORIES(../include)

FIND_PACKAGE(PNG REQUIRED)
FIND_PACKAGE(PkgConfig REQUIRED)
PKG_SEARCH_MODULE(GLFW REQUIRED glfw3)

IF(GLFW_FOUND)
    INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIRS})
    TARGET_LINK_LIBRARIES(MCSkinRenderer ${GLFW_LIBRARIES})
ELSE()
    MESSAGE(SEND_ERROR "GLFW not found!")
ENDIF()

IF(PNG_FOUND)
    INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(MCSkinRenderer ${PNG_LIBRARY})
ELSE()
    MESSAGE(SEND_ERROR "libpng not found!")
ENDIF()

TARGET_LINK_LIBRARIES(MCSkinRenderer ${CMAKE_DL_LIBS})

SET_TARGET_PROPERTIES( MCSkinRenderer 
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)