
SET(SOURCE_FILE glad.c main.cpp)

ADD_EXECUTABLE(MCSkinRenderer ${SOURCE_FILE})

INCLUDE_DIRECTORIES(../include)

FIND_PACKAGE(PNG REQUIRED)
FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(PkgConfig REQUIRED)
PKG_SEARCH_MODULE(GLFW REQUIRED glfw3)


INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(MCSkinRenderer ${GLFW_LIBRARIES})

INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(MCSkinRenderer ${PNG_LIBRARY})

INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(MCSkinRenderer ${ZLIB_LIBRARIES})

TARGET_LINK_LIBRARIES(MCSkinRenderer ${CMAKE_DL_LIBS})

SET_TARGET_PROPERTIES( MCSkinRenderer 
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)